infra/k8s/adoption-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adoption-service
  namespace: pncm
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: adoption-service
  template:
    metadata:
      labels:
        app: adoption-service
    spec:
      containers:
        - name: adoption-service
          image: ilkoninn/pncm-adoption:sha-004dcc388c6fa8cbb5c92399dfa5fc8dc6259e3a
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pncm-adoption
  namespace: pncm
spec:
  selector:
    app: adoption-service
  ports:
    - port: 80
      targetPort: 8080
