infra/k8s/community-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-service
  namespace: pncm
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: community-service
  template:
    metadata:
      labels:
        app: community-service
    spec:
      containers:
        - name: community-service
          image: ilkoninn/pncm-community:sha-6b3ba2618b7d24728a07ade834a245b5264f36c1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pncm-community
  namespace: pncm
spec:
  selector:
    app: community-service
  ports:
    - port: 80
      targetPort: 8080
