infra/k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: pncm
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: ilkoninn/pncm-gateway:sha-6d5311c9106974c5af079195ee00f9e225c1ba9f
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pncm-gateway
  namespace: pncm
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
