infra/k8s/media-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service
  namespace: pncm
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - name: media-service
          image: ilkoninn/pncm-media:sha-5fbe92dbd55522cf4005660bfe887c5587e6669d
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pncm-media
  namespace: pncm
spec:
  selector:
    app: media-service
  ports:
    - port: 80
      targetPort: 8080
