infra/k8s/pet-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-service
  namespace: pncm
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pet-service
  template:
    metadata:
      labels:
        app: pet-service
    spec:
      containers:
        - name: pet-service
          image: ilkoninn/pncm-pet:sha-3edb49a157a7182ee058cc18565cada620ff3c16
          ports:
            - containerPort: 8080
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pncm-pet
  namespace: pncm
spec:
  selector:
    app: pet-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: grpc
      port: 8081
      targetPort: 8081
