infra/k8s/store-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service
  namespace: pncm
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: store-service
  template:
    metadata:
      labels:
        app: store-service
    spec:
      containers:
        - name: store-service
          image: ilkoninn/pncm-store:sha-49135280317c9f3d486557b6afde4d2693968a86
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pncm-store
  namespace: pncm
spec:
  selector:
    app: store-service
  ports:
    - port: 80
      targetPort: 8080
